pkg/lang/testdata/ub/inputs/invalid/default-composite-bare.ub
inputs: {
  protos: { type: optional(list(string), [tcp]) }
}
